re PR c++/47488 (sorry, unimplemented: string literal in function template signature)

PR c++/47488
	* mangle.c (write_template_arg_literal) [STRING_CST]: Sorry.

From-SVN: r170783